--- a/package.json
+++ b/package.json
@@ -18,7 +18,12 @@
   "homepage": "https://github.com/Lowkey98/trivia-bot#readme",
   "dependencies": {
     "axios": "^1.3.6",
+    "discord.js": "^14.9.0",
+    "djs-commander": "^0.0.47",
     "readline": "^1.3.0",
     "shuffle-array": "^1.0.1"
+  },
+  "devDependencies": {
+    "eslint": "^8.40.0"
   }
 }
